[gd_scene load_steps=2]

[ext_resource path="res://scripts/ui/Hud.gd" type="Script" id="1"]

[node name="Hud" type="CanvasLayer" script=ExtResource("1")]

[node name="ResourcesLabel" type="Label" parent="."]
text = "Money: 0 Ammo: 0"

[node name="TileInfoLabel" type="Label" parent="."]
text = "Tile: (0,0) - Empty"

[node name="StartButton" type="Button" parent="."]
text = "Start"

[node name="PauseButton" type="Button" parent="."]
text = "Pause"

[node name="ClockLabel" type="Label" parent="."]
text = "Time: 0"

[node name="BuildingSelect" type="OptionButton" parent="."]

[node name="UnitSelect" type="OptionButton" parent="."]

[node name="SpawnUnitButton" type="Button" parent="."]
text = "Spawn Unit"
